# sfc

./: .coverage  .coveragerc  .gitignore  .gitreview  .yamllint  INFO  INFO.yaml  README  coverage.xml  nosetests.xml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  upper-constraints.txt
VnfMgrSim/vnfmgr/: vnfmgr_main.py
cover/: index.html  sfc___init___py.html  sfc_lib___init___py.html  sfc_lib_cleanup_py.html  sfc_lib_odl_utils_py.html  sfc_lib_openstack_utils_py.html  sfc_lib_test_utils_py.html  sfc_unit_tests___init___py.html  sfc_unit_tests_unit___init___py.html  status.json
deploy/: README.md  TODO.md  ansible.cfg  odl.yml  site.yml
deploy/inventory/: fuel.py  hosts
docs/: conf.yaml  index.rst  requirements.txt
docs/design/: architecture.rst  definitions.rst  index.rst  introduction.rst  requirements.rst  usecases.rst
docs/development/: index.rst
docs/etc/: conf.py
docs/installationprocedure/: feature.configuration.rst  index.rst
docs/release/: index.rst
docs/release-notes/: index.rst
docs/releasenotes/: releasenotes.rst
docs/userguide/: config-overview.rst  feature.userguide.rst  featureusage.rst
scenarios/os-odl-sfc/: xci_overrides
scenarios/os-odl-sfc_osm/: xci_overrides
sfc/lib/: .odl_utils.py.swp  boron_workaround.py  cleanup.py  config.py  odl_utils.py  openstack_tacker.py  openstack_utils.py  osm_utils.py  results.py  sfc_logger.py  test_utils.py  topology_shuffler.py  utils.py
sfc/tests/: NAME_tests.py
tests/functest/: config.py  config.yaml  (+6 more)
vnfmgr/: vnfmgr_main.py
vnfmgr_sim/: vnfmgr_sim.py
(+226 files in other folders)
