[metadata]
name = sfc
home-page = https://wiki.opnfv.org/display/sfc/Service+Function+Chaining+Home

[files]
packages = sfc

[entry_points]
console_scripts =
    run_sfc_tests = sfc.tests.functest.run_sfc_tests:main
xtesting.testcase =
    functest-odl-sfc = sfc.tests.functest.run_sfc_tests:SfcFunctest
